manifests/networking/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
