manifests/networking/ip-forwarding-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: real-ip-headers
  namespace: tunnelled
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
      X-Real-IP: ""
      X-Forwarded-Proto: "https"
    hostsProxyHeaders:
      - "X-Forwarded-Host"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist-trust
  namespace: tunnelled
spec:
  ipAllowList:
    sourceRange:
      - "10.0.0.0/8"
      - "172.16.0.0/12" 
      - "192.168.0.0/16"
      - "127.0.0.1/32"
