manifests/networking/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`argocd.home.coredev.uk`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
  tls:
    secretName: argocd-tls
