manifests/networking/dns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-ingress
  namespace: dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.middlewares: dns-pihole-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - pihole.home.coredev.uk
      secretName: dns-tls
  rules:
    - host: pihole.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 443
