manifests/networking/frigate-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-ingressroute
  namespace: security
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`frigate.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: frigate-headers
      services:
        - name: frigate
          port: 8971
          scheme: https
          serversTransport: frigate-transport
  tls:
    secretName: security-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frigate-headers
  namespace: security
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      Strict-Transport-Security: "max-age=63072000"
