manifests/networking/media-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - radarr.home.coredev.uk
        - sonarr.home.coredev.uk
        - bazarr.home.coredev.uk
        - jellyfin.home.coredev.uk
        - jellyseerr.home.coredev.uk
        - glance.home.coredev.uk
        - notifiarr.home.coredev.uk
        - cleanuparr.home.coredev.uk
        - huntarr.home.coredev.uk
      secretName: media-tls
  rules:
    - host: radarr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
    - host: sonarr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
    - host: bazarr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
    - host: jellyfin.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
    - host: jellyseerr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
    - host: glance.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
    - host: notifiarr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notifiarr
                port:
                  number: 5454
    - host: cleanuparr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cleanuparr
                port:
                  number: 11011
    - host: huntarr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: huntarr
                port:
                  number: 9705
