manifests/networking/media-tunnelled-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-tunnelled-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/middlewares: media-real-ip-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - qbittorrent.home.coredev.uk
        - sabnzbd.home.coredev.uk
        - prowlarr.home.coredev.uk
      secretName: downloads-tls
  rules:
    - host: qbittorrent.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
    - host: sabnzbd.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
    - host: prowlarr.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
