manifests/networking/system-monitoring-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: system-monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: system-monitoring-ingressroute
  namespace: system-monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notifiarr.home.coredev.uk`)
      kind: Rule
      services:
        - name: notifiarr
          port: 5454
  tls:
    secretName: system-monitoring-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: system-monitoring-redirect
  namespace: system-monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`notifiarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: notifiarr
          port: 5454
